Fix spacing between actions and form.

--- a/app/assets/stylesheets/typus/application.css
+++ b/app/assets/stylesheets/typus/application.css
@@ -9,6 +9,7 @@ body.base {
 .actions {
   border: none;
   background: none;
+  margin: 0;
 }
 
 .form-stacked {
